RESOLVED FIXED60945
WebSocket: Uninline methods in ThreadableWebSocketChannelClientWrapper
https://bugs.webkit.org/show_bug.cgi?id=60945
Summary WebSocket: Uninline methods in ThreadableWebSocketChannelClientWrapper
Yuta Kitamura
Reported 2011-05-16 23:47:53 PDT
This is the second part of implementing WebSocket closing handshake (see bug 35721). Add ThreadableWebSocketChannelClietWrapper.cpp. Uninline methods in this class and move these definitions into .cpp in order to allow further modifications in this class.
Attachments
Patch (18.58 KB, patch)
2011-05-16 23:58 PDT, Yuta Kitamura
no flags
Ready to commit (18.57 KB, patch)
2011-05-17 01:53 PDT, Yuta Kitamura
no flags
Ready to commit (18.57 KB, patch)
2011-05-17 01:56 PDT, Yuta Kitamura
no flags
Yuta Kitamura
Comment 1 2011-05-16 23:58:03 PDT
Kent Tamura
Comment 2 2011-05-17 01:04:13 PDT
Comment on attachment 93743 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=93743&action=review Looks ok. > Source/WebCore/websockets/ThreadableWebSocketChannelClientWrapper.cpp:35 > +#include "config.h" > + > +#if ENABLE(WEB_SOCKETS) > + > +#include "ThreadableWebSocketChannelClientWrapper.h" nit: Need no blank lines.
Yuta Kitamura
Comment 3 2011-05-17 01:53:12 PDT
Created attachment 93749 [details] Ready to commit
Yuta Kitamura
Comment 4 2011-05-17 01:56:26 PDT
Created attachment 93750 [details] Ready to commit
Hajime Morrita
Comment 5 2011-05-17 03:27:19 PDT
Comment on attachment 93750 [details] Ready to commit cq+
WebKit Commit Bot
Comment 6 2011-05-17 04:52:41 PDT
Comment on attachment 93750 [details] Ready to commit Rejecting attachment 93750 [details] from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-4', 'land-a..." exit_code: 1 Last 500 characters of output: autoinstalled/mechanize/_urllib2_fork.py", line 332, in _call_chain result = func(*args) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_urllib2_fork.py", line 1170, in https_open return self.do_open(conn_factory, req) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_urllib2_fork.py", line 1118, in do_open raise URLError(err) urllib2.URLError: <urlopen error [Errno 60] Operation timed out> Full output: http://queues.webkit.org/results/8705311
Yuta Kitamura
Comment 7 2011-05-17 04:59:19 PDT
Hum? CQ failed but the patch has been landed in r86669. Closing the issue...
WebKit Commit Bot
Comment 8 2011-05-17 05:41:54 PDT
The commit-queue encountered the following flaky tests while processing attachment 93750 [details]: http/tests/websocket/tests/url-with-query.html bug 60955 (author: abarth@webkit.org) The commit-queue is continuing to process your patch.
Note You need to log in before you can comment on or make changes to this bug.